--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 readme = "README.md"
 license = "MIT"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.11"
 keywords = ["face-detection", "mediapipe", "yolo", "computer-vision", "api"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -35,6 +35,11 @@ dependencies = [
     "click>=8.0.0",
     "tqdm>=4.64.0",
     "gradio>=5.49.1",
+    # 人脸识别相关依赖
+    "facenet-pytorch>=2.5.2",
+    "scikit-learn>=1.3.0",
+    "matplotlib>=3.5.0",
+    "seaborn>=0.12.0",
 ]
 
 [project.optional-dependencies]
