--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# ⚠️ 固定使用 Python 3.10.x（MediaPipe 在更高版本上暂不支持）
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 mediapipe==0.10.9
@@ -6,3 +7,11 @@ numpy==1.24.3
 Pillow==10.1.0
 python-multipart==0.0.6
 pydantic==2.5.0
+# 人脸识别相关依赖
+facenet-pytorch==2.5.2
+torch>=2.0.0
+torchvision>=0.15.0
+scikit-learn>=1.3.0
+# 可选依赖
+gradio>=5.49.1
+click>=8.0.0
